# BMObot

./: .env.example  .gitignore  Cargo.toml
src/: discord_utils.rs  files.rs  main.rs
src/commands/: add_player.rs  draw_card.rs  mod.rs  new_game.rs  player_infos.rs  promote.rs
src/game_logic/: card.rs  deck.rs  game.rs  mod.rs  player.rs
