[package]
name = "bmobot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.rand]
version = "0.8.5"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.dotenv]
version = "0.15.0"