[package]
name = "bmobot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "collector"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
