[package]
name = "bmobot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1


[dependencies]
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "collector"] }
tokio = { version = "1.31.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
once_cell = "1.18.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"